<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="6dp"
        android:textSize="16sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/toDoTitle" />

    <EditText
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="6dp"
        android:textSize="16sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/desct" />

    <EditText
        android:id="@+id/desct"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="6dp"
        android:textSize="16sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/due" />

    <EditText
        android:id="@+id/due"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:text="@string/save"
        android:textStyle="bold" />
</LinearLayout>